// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapFile should transform api file into WrappedFile 1`] = `
Object {
  "_id": "f1",
  "createdAt": 2017-02-22T09:19:33.885Z,
  "createdBy": Object {
    "_id": "f1",
    "type": "user",
  },
  "downloadUrl": "http://download/f1",
  "filename": "f1.jpeg",
  "id": "f1",
  "mimeType": "image/jpeg",
  "name": "My File",
  "public": true,
  "rawFile": Object {
    "_id": "f1",
    "createdAt": "2017-02-22T09:19:33.885Z",
    "createdBy": Object {
      "_id": "f1",
      "type": "user",
    },
    "downloadUrl": "http://download/f1",
    "filename": "f1.jpeg",
    "mimeType": "image/jpeg",
    "name": "My File",
    "public": true,
    "size": 246,
    "status": "ready",
    "tags": Array [
      "t1",
      "t2",
    ],
    "updatedAt": "2018-10-22T09:19:33.885Z",
    "uploadUrl": "http://upload/f1",
  },
  "size": 246,
  "status": "ready",
  "tags": Array [
    "t1",
    "t2",
  ],
  "updatedAt": 2018-10-22T09:19:33.885Z,
  "uploadUrl": "http://upload/f1",
}
`;

exports[`wrapFileArray should transform array of ApiFile into array of WrappedFile 1`] = `
Array [
  Object {
    "_id": "f1",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "http://download/f1",
    "filename": "f1.jpeg",
    "id": "f1",
    "mimeType": "image/jpeg",
    "name": "My File",
    "public": true,
    "rawFile": Object {
      "_id": "f1",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u1",
        "type": "user",
      },
      "downloadUrl": "http://download/f1",
      "filename": "f1.jpeg",
      "mimeType": "image/jpeg",
      "name": "My File",
      "public": true,
      "size": 246,
      "status": "ready",
      "tags": Array [
        "t1",
        "t2",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f1",
    },
    "size": 246,
    "status": "ready",
    "tags": Array [
      "t1",
      "t2",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f1",
  },
  Object {
    "_id": "f2",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u2",
      "type": "user",
    },
    "downloadUrl": "",
    "filename": "f2.pdf",
    "id": "f2",
    "mimeType": "application/pdf",
    "name": "My Other File",
    "public": false,
    "rawFile": Object {
      "_id": "f2",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u2",
        "type": "user",
      },
      "downloadUrl": "",
      "filename": "f2.pdf",
      "mimeType": "application/pdf",
      "name": "My Other File",
      "public": false,
      "size": 400,
      "status": "pending",
      "tags": Array [
        "t1",
        "t2",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f2",
    },
    "size": 400,
    "status": "pending",
    "tags": Array [
      "t1",
      "t2",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f2",
  },
]
`;
